--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,3 +32,7 @@
   position: absolute;
   bottom: -3rem !important;
 }
+
+.dashboardPaginationTable .MuiTablePagination-selectLabel,.dashboardPaginationTable  .MuiTablePagination-displayedRows {
+  margin: 0;
+}
